--- a/plugins/adversary_emulation/data/abilities/credential-access/0f2i3d4e-h6g7-4i8j-de4f-exfiltrate-ntds.yml
+++ b/plugins/adversary_emulation/data/abilities/credential-access/0f2i3d4e-h6g7-4i8j-de4f-exfiltrate-ntds.yml
@@ -7,8 +7,8 @@
     name: "OS Credential Dumping: NTDS"
   requirements:
     - plugins.stockpile.app.requirements.existential: 
-      - domain.admin.pwned
-      - domain.controller.hostname
+      - source: domain.admin.pwned
+      - source: domain.controller.hostname
   platforms:
     windows:
       psh:
