--- a/plugins/adversary_emulation/data/abilities/execution/5b6c7d8e-9f0a-1b2c-3d4e-verifydarights.yml
+++ b/plugins/adversary_emulation/data/abilities/execution/5b6c7d8e-9f0a-1b2c-3d4e-verifydarights.yml
@@ -12,13 +12,13 @@
     windows:
       psh:
         command: |
-          $dc = "#{domain.controller.hostname}"
+          $dc = "#{domain.controller.hostname}";
           try {
-              $null = ls \\$dc\c$ -ErrorAction Stop
-              Write-Host "Domain-Admin-Access-Confirmed: TRUE"
+              $null = ls \\$dc\c$ -ErrorAction Stop;
+              Write-Host "Domain-Admin-Access-Confirmed: TRUE";
           } catch {
-              Write-Host "Domain-Admin-Access-Confirmed: FALSE"
-          }
+              Write-Host "Domain-Admin-Access-Confirmed: FALSE";
+          };
         parsers:
           plugins.adversary_emulation.app.parsers.regex_parser:
             - source: 'domain.admin.pwned'
