--- a/plugins/adversary_emulation/data/abilities/discovery/c3b4d5e6-f7a8-49b0-9c1d-ldap-domain-admins.yml
+++ b/plugins/adversary_emulation/data/abilities/discovery/c3b4d5e6-f7a8-49b0-9c1d-ldap-domain-admins.yml
@@ -13,6 +13,7 @@
           $searcher = New-Object System.DirectoryServices.DirectorySearcher([ADSI]$domainPath);
           $searcher.Filter = "(&(objectCategory=group)(name=Domain Admins))";
           $group = $searcher.FindOne();
+          $samAccountNames = @();
           foreach ($member in $group.Properties.member) {
               $memberSearcher = New-Object System.DirectoryServices.DirectorySearcher([ADSI]"LDAP://$member");
               $memberSearcher.PropertiesToLoad.Add("sAMAccountName") | Out-Null;
