--- a/plugins/adversary_emulation/data/abilities/discovery/92cb926e-1e63-4ec3-9b47-certify-esc1.yml
+++ b/plugins/adversary_emulation/data/abilities/discovery/92cb926e-1e63-4ec3-9b47-certify-esc1.yml
@@ -16,5 +16,5 @@
           plugins.adversary_emulation.app.parsers.regex_parser:
             - source: 'esc1.template'
               custom_parser_vals:
-                regex: '(?s)\[!\] Vulnerable Certificates Templates :.*?Template Name\s+:\s+([\S]+)'
+                regex: '(?s)\[!\] Vulnerable Certificates Templates\s*:.*?Template Name\s*:\s*([^\r\n]+)'
                 edge_label: 'is_esc1_vulnerable'
