finetuning_adv_profiles

--- a/plugins/adversary_emulation/data/abilities/collection/2b3c4d5e-f6g7-8b9c-0d1e-ntds-copy.yml
+++ b/plugins/adversary_emulation/data/abilities/collection/2b3c4d5e-f6g7-8b9c-0d1e-ntds-copy.yml
@@ -8,7 +8,7 @@
   requirements:
     - plugins.stockpile.app.requirements.existential:
         - source: file.ntds.staged_path_remote
-        - source: domain.user.impersonated
+        - source: domain.admin.pwned
         - source: domain.controller.hostname
   platforms:
     windows:
