--- a/plugins/adversary_emulation/data/abilities/credential-access/1a2b3c4d-e5f6-7a8b-9c0d-ntds-dump.yml
+++ b/plugins/adversary_emulation/data/abilities/credential-access/1a2b3c4d-e5f6-7a8b-9c0d-ntds-dump.yml
@@ -8,7 +8,7 @@
   requirements:
     # Requires confirmed DA privileges and the DC's hostname
     - plugins.stockpile.app.requirements.existential:
-        - source: domain.user.impersonated
+        - source: domain.admin.pwned
         - source: domain.controller.hostname
   platforms:
     windows:
