--- a/plugins/adversary_emulation/data/abilities/collection/a1b2c3d4-e5f6-g7h8-i9j0-consolidate-data.yml
+++ b/plugins/adversary_emulation/data/abilities/collection/a1b2c3d4-e5f6-g7h8-i9j0-consolidate-data.yml
@@ -13,10 +13,10 @@
     windows:
       psh:
         command: |
-          $stagingDir = "C:\Users\Public\Loot";
-          $archivePath = "C:\Users\Public\ifs_loot.zip";
-          if (Test-Path "$stagingDir\*") {
-              Compress-Archive -Path "$stagingDir\*" -DestinationPath $archivePath -Force;
+          $lootDir = "#{env.dir.loot}";
+          $archivePath = "#{env.dir.stage}\ifs_loot.zip";
+          if (Test-Path "$lootDir\*") {
+              Compress-Archive -Path "$lootDir\*" -DestinationPath $archivePath -Force;
           };
           if (Test-Path $archivePath) {
               Write-Host "Archive-Created: $archivePath";
