--- a/plugins/adversary_emulation/data/abilities/credential-access/81250e3d-bafd-41ef-b7de-certreq-esc1.yml
+++ b/plugins/adversary_emulation/data/abilities/credential-access/81250e3d-bafd-41ef-b7de-certreq-esc1.yml
@@ -13,7 +13,7 @@
     windows:
       psh:
         command: |
-          cd "C:\Users\Public";
+          cd "#{env.dir.stage}";
           $shortname = "#{esc1.target_user}";
           $upn = "$shortname@#{domain.name}";
           $template = "#{esc1.template}";
