--- a/plugins/adversary_emulation/data/abilities/defense-evasion/d2e3f4g5-h6i7-j8k9-l0m1-cleanup-final.yml
+++ b/plugins/adversary_emulation/data/abilities/defense-evasion/d2e3f4g5-h6i7-j8k9-l0m1-cleanup-final.yml
@@ -21,7 +21,10 @@
           Remove-Item "$stagingDir\accesschk64.exe" -ErrorAction SilentlyContinue;
           Remove-Item "$stagingDir\request.inf" -ErrorAction SilentlyContinue;
           Remove-Item "$stagingDir\request.req" -ErrorAction SilentlyContinue;
+          Remove-Item "$stagingDir\cert.rsp" -ErrorAction SilentlyContinue;
           Remove-Item "$stagingDir\cert.cer" -ErrorAction SilentlyContinue;
+          Remove-Item "$stagingDir\svc-launcher.cs" -ErrorAction SilentlyContinue;
+          Remove-Item "$stagingDir\svc-launcher.exe" -ErrorAction SilentlyContinue;
           Remove-Item $archivePath -ErrorAction SilentlyContinue;
           Remove-Item $lootDir -Recurse -Force -ErrorAction SilentlyContinue;
           Write-Host "Cleanup-Complete: TRUE";
