--- a/plugins/adversary_emulation/data/abilities/persistence/e3a1b4c2-d5e6-4f7a-8b9c-DC-sched.yml
+++ b/plugins/adversary_emulation/data/abilities/persistence/e3a1b4c2-d5e6-4f7a-8b9c-DC-sched.yml
@@ -7,7 +7,7 @@
     name: "Scheduled Task/Job: Scheduled Task"
   requirements:
     - plugins.stockpile.app.requirements.existential:
-        - source: domain.user.impersonated
+        - source: ddomain.admin.pwned
         - source: domain.controller.hostname
   platforms:
     windows:
